# lrauv-backseat-marl

./: .gitignore  README.md  build.sh  install.sh  launch_lrauv_sim_marl.sh  setup.cfg  start_backseat-marl
Missions/: joystick_acoustic_backseat_marl.tl  joystick_acoustic_backseat_marl.xml  marl.tl  marl2.tl  marl3.tl
backseat-marl_service/: README.md  backseat-marl.service
backseat_app/: main.py  processing.py  utils.py
backseat_app/config/: app_cfg.yml  app_cfg_daphne.yml  app_cfg_pontus.yml  app_cfg_tethys.yml
backseat_app/jaxagent/: __init__.py  jax_agent.py  (+2 more)
logs/: 20251003T180405_log.txt  20251006T214128_log.txt  20251006T214415_log.txt  20251006T215424_log.txt  20251006T220248_log.txt  20251006T220915_log.txt  20251006T221117_log.txt  20251006T223417_log.txt  20251006T225753_log.txt  20251006T230928_log.txt  20251007T172512_log.txt  20251007T173451_log.txt  20251007T180105_log.txt  20251007T180737_log.txt  20251007T181627_log.txt  20251007T182003_log.txt  20251007T182534_log.txt  20251007T182849_log.txt  20251007T183311_log.txt  20251007T185010_log.txt  20251007T185607_log.txt  20251007T190211_log.txt  20251007T191223_log.txt  20251007T192419_log.txt  20251007T193218_log.txt  20251007T193415_log.txt  20251007T193726_log.txt  20251007T194934_log.txt  20251007T195022_log.txt  20251007T195306_log.txt  20251007T195924_log.txt  20251007T200231_log.txt  20251007T203917_log.txt  20251007T204209_log.txt  20251007T204548_log.txt  20251007T205203_log.txt  20251007T205628_log.txt  20251008T155419_log.txt  20251008T165521_log.txt  20251008T165807_log.txt  (+733 more)
(+1797 files in other folders)
