[metadata]
name = backseat_app
version = 0.1.0

[options]
packages = 
    find:
install_requires =
    empy
    numpy
    scipy
    lcm
    h5py
    netCDF4
    pandas
    PyYAML
    setuptools
    matplotlib
    jax==0.4.23
    jaxlib==0.4.23
    flax==0.7.2
    safetensors==0.4.2
    distrax==0.1.3
    utm
    torch

zip_safe = False
include_package_data = True

[options.packages.find]
include = backseat_app*

[options.entry_points]
console_scripts =
    backseat_app = backseat_app.main:main

[options.package_data]
backseat_app = jaxagent/IROS_MODELS/*.safetensors
